FenicsPDE/MOND/jupyternbs/dolfin_reports/jitfailure-dolfin_expression_8fa2aadc6c4393cc42b67c3619cf5c5e/error.log
/tmp/tmpzmaglkbu/dolfin_expression_8fa2aadc6c4393cc42b67c3619cf5c5e.cpp: In member function ‘virtual void dolfin::dolfin_expression_8fa2aadc6c4393cc42b67c3619cf5c5e::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpzmaglkbu/dolfin_expression_8fa2aadc6c4393cc42b67c3619cf5c5e.cpp:62:33: error: ‘G’ was not declared in this scope
           values[0] = x[0]+a0 + G;
                                 ^
